infra/kubernetes/stg/default/lesson-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lesson-api
  labels:
    app: lesson-api
spec:
  selector:
    app: lesson-api
  # type: ClusterIP
  clusterIP: None
  ports:
  - name: grpc
    protocol: TCP
    port: 8080
    targetPort: 8080
