infra/kubernetes/stg/default/student-gateway.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-gateway
  labels:
    api: student-gateway
spec:
  selector:
    app: student-gateway
  # type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
