infra/kubernetes/stg/default/user-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-api
  labels:
    app: user-api
spec:
  selector:
    app: user-api
  # type: ClusterIP
  clusterIP: None
  ports:
  - name: grpc
    protocol: TCP
    port: 8080
    targetPort: 8080
