infra/kubernetes/stg/default/common.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shs-web-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: shs-web-ip-address
    networking.gke.io/managed-certificates: shs-web-certificate
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - http:
      paths:
      - path: /teacher/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: teacher-gateway
            port:
              number: 8080
      - path: /student/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: student-gateway
            port:
              number: 8080
